jenkinshelm/templates/deployset-jenkins.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-j
spec:
  replicas: 4 
  selector: 
    matchLabels:
      app: deploy-j
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: deploy-j
    spec:
      containers:
      - name: deploy
        image: jenkins/jenkins:lts
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
          readOnlyRootFilesystem: false
          runAsUser: 0
        volumeMounts:
          - mountPath: "/var/jenkins_home"
            name: jenkinsvolume 
      volumes: 
        - name: jenkinsvolume
          persistentVolumeClaim:
            claimName: jenkins-home-claim
