jenkinshelm/templates/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: jenkins-deploy
spec:
  selector:
    app: jenkins-deploy
  ports:
    - name: port1
      port: 8080
      targetPort: 8080
    - name: port2
      port: 50000
      targetPort: 50000
